--- a/ucv-mad-js-main/assets/css/styles.css
+++ b/ucv-mad-js-main/assets/css/styles.css
@@ -66,3 +66,23 @@ footer {
 footer h2 {
     font-size: 1.5vh;
 }
+.hcontainer{
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: 100vw;
+}
+.hcontainer>#clickercontainer{
+ background-color: aliceblue;
+ display: flex;
+ flex-direction: row;
+ justify-content: space-around;
+ align-items: center;
+ width: fit-content;
+ height: fit-content;
+ margin-top: 1vh;
+ margin-right: .6vw;
+ padding: 1vh .7vw;
+ border-radius: 50px;
+ border: solid 1px black;
+}
